--- a/css/colours.css
+++ b/css/colours.css
@@ -13,5 +13,6 @@
 
 .fc-w1 { color:#FFFFFF; }
 .fc-think { color:#7A42EB; }
+.fc-think-blue { color:#00B8FF; }
 .fc-think-yellow { color:#D5F901; }
 .fc-think-gray { color:rgba(0,0,0,.3); }
