--- a/css/responsive.css
+++ b/css/responsive.css
@@ -440,5 +440,54 @@
 }
 
 
+/* prices */
+
+@media screen and ( max-width:1000px )
+{
+    #prices > header { margin-top:150px ; }
+    #prices > section { width:90%; }
+}
+
+@media screen and ( max-width:800px )
+{
+    #prices > section { flex-wrap: wrap; }
+    #prices > section > section { width:80%; }
+}
+
+@media screen and ( max-width:600px )
+{
+    #prices > section > section { width:100%;}
+}
+
+@media screen and ( max-width:400px )
+{
+    #prices > section { width:90%; }
+    #prices > section > section { padding:0px;margin-bottom:20px; }
+}
+
+/* our-products */
+
+@media screen and ( max-width:1200px )
+{
+    #our-products > section > section { width:33.33%; }
+}
+
+@media screen and ( max-width:1000px )
+{
+    #our-products > section > section { width:50%; }
+}
+
+@media screen and ( max-width:700px )
+{
+    #our-products > section > section { width:80%; }
+}
+
+@media screen and ( max-width:500px )
+{
+    #our-products > section > section { width:100%; }
+}
+
+
+
  
 
