--- a/css/nav.css
+++ b/css/nav.css
@@ -1,23 +1,25 @@
-nav {
+nav 
+{
     display:flex;
-    width:100%;
-    position:absolute;
-    z-index:60;
     height:80px;
     justify-content: space-between;
+    position:absolute;
+    width:100%;
+    z-index:60;
 }
 
 #bx-btn
 {
-    display:none;
-    justify-content: center;
     align-items: center;
-    width:80px;
-    height:80px;
     cursor:pointer;
+    display:none;
+    height:80px;
+    justify-content: center;
+    width:80px;
 }
 
-#logo {
+#logo 
+{
     display:flex;
     justify-content: center;
     align-items: center;
@@ -116,7 +118,7 @@ li > a:hover { color:#D5F901; }
     }
 
 
-    nav > ul > li { margin:25px 0px ;}
+    nav > ul > li { margin:38px 0px ;}
 
     #sub-list 
     {  
@@ -132,9 +134,11 @@ li > a:hover { color:#D5F901; }
         
     }
 
-    /* nav > ul > li { border:1px solid white; } */
-
-    nav > ul > li > span { text-align: center; display:block; }  
+    nav > ul > li > span 
+    { 
+        text-align: center; 
+        display:block; 
+    }  
 
     #logo { min-width:250px; }
 }
