--- a/css/style.css
+++ b/css/style.css
@@ -384,8 +384,13 @@
 }
 
 .video { 
-    width:100%; 
+    width:100%;
+    border-radius:15px; 
+    display:none;
+    overflow:hidden;
 }
+
+.video:first-of-type { display: flex; }
 
 #video > section > ul 
 { 
@@ -579,4 +584,96 @@ footer > section > article > button { width:100% !important;color:#FFFFFF; }
     width:100%;
 }
 
+/* mockups */
 
+#bx-mockup 
+{
+    width:100%;
+    height:100vh;
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+}
+
+#bx-mockups-deslice
+{
+    width:100%;
+    height:100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    transition:.2s;
+}
+
+.bx-mockups-videos 
+{
+    border:15px solid #FFFFFF;
+    margin:0px 2%;
+    background-color:rgba(0,0,0,.3);
+    border-radius:50px;
+    width:20%;
+    min-width:306px;
+    height:65vh;
+    overflow:hidden;
+    box-shadow:0px 0px 35px rgba(0,0,0,.3);
+}
+
+#circle-mockups 
+{
+    width:400px;
+    height:400px;
+    border-radius:50%;
+    position:absolute;
+    z-index:-1;
+    align-self: center;
+}
+
+/* mockups videos - btns */
+
+#btns-mockups 
+{
+    position: absolute;
+    z-index:100;
+    width:100%;
+    display:flex;
+    justify-content:space-between;
+}
+
+.bx-btn-play 
+{
+    width:300px;
+    height:300px;
+    position: absolute;
+    z-index:50;
+    display: flex;
+    margin:auto;
+    top:0px;
+    bottom:0px;
+    justify-self:center ;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    opacity:0;
+    transition:.2s;
+}
+
+.bx-btn-play:hover { opacity:1; }
+
+.btn-play,
+.btn-pause 
+{ 
+    cursor:pointer;
+    opacity:.7;
+    width:80px;
+    height:80px;
+}
+
+.btn-pause { display:none; }
+
+.btn-pause:hover { opacity:1; }
+.btn-play:hover { opacity:1; }
+
+/* mockup - video */
+
+.video-mockup { margin:-150px 0px 0px -350px; }
