--- a/css/responsive.css
+++ b/css/responsive.css
@@ -63,7 +63,8 @@
 
 @media screen and ( max-width: 600px )
 {
-    #slide > section  { padding:0px 2%; }
+    #slide > section > article { width:100%; }
+    #slide > section  { padding:0px;padding:0px 3%; }
 
     .img-slide { width:1080px; }
 
@@ -97,14 +98,13 @@
 
 @media screen and ( max-width: 600px ) 
 {
-    #apps-radius > header { width:80%; }
+    #apps-radius > header { width:90%;padding:1%; }
     #btns-apps { bottom:50px; }
     .boxis { min-width:34% !important; }
 }
 
 @media screen and ( max-width:400px ) 
 {
-
     .boxis { min-width:50% !important; }
 }
 
@@ -186,7 +186,8 @@
 {
     .img-md { width:100%; }
 
-    #gadgets > article > ul > li { padding:1%;}
+    #gadgets > article > ul > li { padding:0px; }
+    #gadgets > article  { padding:30px 0px; width:100%;  }
 }
 
 
@@ -233,6 +234,8 @@
 
     #novelties > section > article:first-of-type,
     #novelties > section > article:last-of-type { width:100%; }
+
+    .inp-subscribe { text-align: center; }
 }
 
 /* benefits */
@@ -283,9 +286,11 @@
     #cite > section > article > .f-3 { font-size:1.5rem; }
 }
 
-@media screen and ( max-width:800px ) 
+@media screen and ( max-width:600px ) 
 {
-    #cite > section > article { width:100%; }
+    #cite > section > article { width:100%;padding:10px; }
+
+    #cite > section > article > .f-3 { font-size:1.2rem; }
 }
 
 @media screen and ( max-width:350px ) 
@@ -321,16 +326,24 @@
 {
     .slide-previews { width:1440px; height:700px; }
     .card-think-about { width:80%; }
+    .previews-more-shadow { top:50px; } 
 }
+
+@media screen and ( max-width:700px )
+{
+    .vector-preview { top:70px; }
+    .previews-more-shadow { top:50px; }
+} 
 
 @media screen and ( max-width:600px ) 
 {
     .card-think-about > p { text-align: center; }
+    .card-think-about { padding:0px; }
 }
 
 @media screen and ( max-width:450px ) 
 {   
-    .card-think-about { height:auto; padding:15px; }
+    .card-think-about { height:auto;  }
     .card-think-about > p {  font-size:.9rem; }
 }
 
