--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@
     position: relative; 
     z-index:10; 
     margin-top:0px;
+    width:100%;
 }
 
 
@@ -122,6 +123,25 @@
     top:50px;
 }
 
+#novelties > section > article 
+{
+    position:relative;
+    z-index:3;
+}
+
+.more-shadow 
+{
+    position:absolute;
+    z-index:1;
+}
+
+.inp-subscribe 
+{
+    padding-left:13px;
+    text-align: left;
+    font-weight:'think-light';
+}
+
 /* together */
 
 .revol-banner {
@@ -162,6 +182,14 @@
     position:absolute;
     width:40px;
     left:-10px;
+}
+
+.previews-more-shadow 
+{
+    position:absolute;
+    top:35px;
+    left:-10px;
+    width:70px;
 }
 
 /* hero-1 */
