agregado de componentes heros y responsive

--- a/css/colours.css
+++ b/css/colours.css
@@ -16,3 +16,4 @@
 .fc-think-blue { color:#00B8FF; }
 .fc-think-yellow { color:#D5F901; }
 .fc-think-gray { color:rgba(0,0,0,.3); }
+.fc-think-black { color:#000000; }
