--- a/css/nav.css
+++ b/css/nav.css
@@ -6,6 +6,7 @@ nav
     position:absolute;
     width:100%;
     z-index:60;
+    padding-right:20px;
 }
 
 #bx-btn
@@ -27,6 +28,8 @@ nav
     height:80px;
 }
 
+
+
 nav > ul {
     display: flex;
     align-items: center;
@@ -45,6 +48,8 @@ nav > ul > li
 nav > ul > li > a ,
 nav > ul > li > span  
 {
+    font-family: 'think-bold';
+    font-size:16px;
     text-decoration:none;
     color:#FFFFFF;
     transition:.2s;
@@ -98,6 +103,7 @@ li > a:hover { color:#D5F901; }
     { 
         background-color:#191919;
         position:fixed; 
+        padding-right:0px;
     }
 
     nav > ul 
@@ -144,8 +150,29 @@ li > a:hover { color:#D5F901; }
 
 @media screen and ( max-width:800px ) 
 {
-    #logo { padding-bottom:10px; }
+    #logo > div:first-child > img { margin-top:5px; }
+    #logo > div:last-child > img { height:10px;margin-top:10px; }
+
     #bx-btn { display:flex; padding-bottom:15px; }
+}
+
+@media screen and ( max-width:600px ) 
+{       
+    #logo { padding-bottom:10px; }
+
+    #logo > div { height:30px;margin-top:20px; }
+
+    #logo > div > img { height:15px; }
+    
+    nav { height:50px; }
+    #logo { width:125px;min-width:0px;height:50px; }
+    #bx-btn 
+    { 
+        height:50px;
+        padding:15px 0px; 
+    }
+
+    nav > ul  { max-width:300px;top:50px; }
 }
 
 @media screen and ( max-width:400px ) 
@@ -157,4 +184,6 @@ li > a:hover { color:#D5F901; }
         justify-content: center;
         align-items: center; 
     }
+
+    nav > ul { width:100%;max-width:1000px; }
 }
