--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,9 +2,105 @@
 
 @media screen and ( max-width: 600px ) 
 {
-    .f-1 { font-size:2rem; }
-    .f-5 { font-size:.9rem; }
+    .f-1 { font-size:28px;line-height:36px }
+    .f-2 { font-size:20px;line-height:36px }
+    .f-3 { font-size:18px;line-height:36px }
+    .f-4 { font-size:15px;line-height:36px }
+    .f-5 { font-size:.9rem;line-height:28px }
 }
+
+/* slide */
+
+
+@media screen and ( max-width: 1440px ) 
+{
+    #slide > section > article { width:60%;min-width:680px; }
+
+    .img-slide { width:100%;height:100vh;min-width:1440px;}
+    
+}
+
+@media screen and ( max-width: 1200px )
+{
+    .img-slide { margin-left:-20%; }
+}
+
+@media screen and ( max-width: 1000px )
+{
+    .img-slide { width:130%;margin-left:-40%; }
+}
+
+@media screen and ( max-width: 900px )
+{
+    .img-slide { margin-left:-60%; }
+}
+
+@media screen and ( max-width: 800px )
+{
+
+    #slide { height:150vh; }
+    
+    #slide > section > article { width:100% !important; min-width:100px;padding:1%; }
+
+    #slide > section > article > .btn { width:100%; }
+
+    .img-slide { margin-left:-80%; }
+
+    #gradient 
+    {
+        height:150vh;
+        background: rgb(0,0,0);
+        background: linear-gradient(0deg, rgba(0,0,0,1) 40%, rgba(0,0,0,0) 70%);
+    }
+}
+
+@media screen and ( max-width: 600px )
+{
+    .img-slide 
+    { 
+        float:left;
+        min-width:0px;
+        margin-left:-400px;
+        height:80vh;
+    }
+
+    #slide > section > article { width:100%;padding:4%;}
+
+    #slide > section > article > .f-5,
+    #slide > section > article > .btn { font-family:'think-bold'; }
+
+    #slide > section > article > .btn { font-size:18px; }
+    
+
+    #slide > section  { padding:0px;padding:0px 3%; }
+
+    .img-slide { width:1080px; }
+
+    #gradient,
+    #slide { height:100vh; } 
+}
+
+@media screen and ( max-width: 420px )
+{
+    .img-slide 
+    { 
+        width:160%;
+        min-width:800px;
+        height:60vh;
+        margin-left:-85%; 
+    }
+
+    #slide > section > article { padding:5px;}
+
+    #gradient { height:100vh; }
+    #slide { height:100vh; } 
+}
+
+@media screen and ( max-width: 350px )
+{
+    .img-slide { margin-left:-100%; }
+}
+
 
 /* complementary */
 
@@ -31,54 +127,9 @@
 
     #complementary > article > ul > li { width:25%; }
 
-    
     #btns-complementary { display:flex; } 
 }
 
-
- 
-
-/* slide */
-
-@media screen and ( max-width: 1100px )
-{
-    #slide > section > article { width:80%; }
-}
-
-@media screen and ( max-width: 800px )
-{
-    #slide > section > article { width:80%; }
-
-    #slide { height:150vh; } 
-
-    #gradient 
-    {
-        height:150vh;
-        background: rgb(0,0,0);
-        background: linear-gradient(0deg, rgba(0,0,0,1) 34%, rgba(0,0,0,0) 100%);
-    }
-
-    #slide > section > article > .btn { width:100%; }
-}
-
-@media screen and ( max-width: 600px )
-{
-    #slide > section > article { width:100%; }
-    #slide > section  { padding:0px;padding:0px 3%; }
-
-    .img-slide { width:1080px; }
-
-    #gradient,
-    #slide { height:120vh; } 
-}
-
-@media screen and ( max-width: 400px )
-{
-    .img-slide { width:1000px; }
-
-    #gradient,
-    #slide { height:110vh; } 
-}
 
 /* apps */
 
@@ -164,6 +215,12 @@
     #gadgets > article > ul > li > div > div { width:50%; }
 }
 
+@media screen and ( max-width: 900px ) 
+{
+    #gadgets > article > ul > li > div > div { width:50%; }
+
+    #gadgets > article > ul > li { padding:0px; }
+}
 
 @media screen and ( max-width: 800px ) 
 {
@@ -210,32 +267,45 @@
 
 /* novelties */
 
+@media screen and ( max-width: 1440px )
+{
+    #novelties > section > article:first-of-type { width:55%;min-width:0px; }
+    #novelties > section > article:last-child { width:45%; }
+
+    #bx-subscribe { justify-content: flex-start; }
+}
+
+
 @media screen and ( max-width: 1200px ) 
 {
+    #novelties > section > article:first-of-type,
+    #novelties > section > article:last-child { width:90%; }
+
+    #bx-subscribe { justify-content: center; }
+
     #form-subscribe > div { flex-direction: column; }
     #form-subscribe > div > input { margin-bottom:15px; width:250px; }
     #form-subscribe > div > button { width:250px; }
 }
 
-@media screen and ( max-width: 1000px ) 
-{
-
-    #novelties > section > article:first-of-type { width:60%; }    
-    #novelties > section > article:last-of-type { width:40%; }
-
-    #novelties > section > article:first-of-type > h1,
-    #novelties > section > article:first-of-type > p { padding-left:0px; }
-}
-
 @media screen and ( max-width: 800px ) 
 {
+    #novelties > section > article:first-of-type > div > .f-1,
+    #novelties > section > article:first-of-type > div > .f-5 { padding-left:0px; }
+
     #novelties > section > article > h1,
     #novelties > section > article > p { text-align: center;}
 
-    #novelties > section > article:first-of-type,
-    #novelties > section > article:last-of-type { width:100%; }
-
     .inp-subscribe { text-align: center; }
+}
+
+@media screen and ( max-width: 500px ) 
+{
+    #novelties > section > article:first-of-type > div { width:100%; }
+    #bx-subscribe { flex-direction:column; }
+    
+    #bx-subscribe > input,
+    #bx-subscribe > button { width:100%; max-width:none; margin-bottom:10px; }
 }
 
 /* benefits */
@@ -279,6 +349,11 @@
 
 /* cite */
 
+@media screen and ( max-width:1440px )
+{
+    
+}
+
 @media screen and ( max-width:800px ) 
 {
     #cite > section > article { width:90%; }
@@ -288,7 +363,7 @@
 
 @media screen and ( max-width:600px ) 
 {
-    #cite > section > article { width:100%;padding:10px; }
+    #cite > section > article { width:90%;padding:10px; }
 
     #cite > section > article > .f-3 { font-size:1.2rem; }
 }
@@ -301,18 +376,30 @@
 
 /* together */
 
-@media screen and ( max-width:1100px ) 
+@media screen and ( max-width:1300px ) 
 {
     #together { justify-content: flex-end; }
 }
 
-@media screen and ( max-width:600px ) 
+@media screen and ( max-width:800px ) 
 {
-    #together { justify-content:center; }
-
+    #together { justify-content: center; }
     #together > .revol-banner { opacity:.6; z-index:2; }
-
     #together > article { width:100%; position:relative; z-index:5; }
+}
+
+@media screen and ( max-width:410px ) 
+{
+    .revol-banner 
+    { 
+        font-size:100px;
+        text-align: center;
+        letter-spacing:0px;
+        left:5%; 
+    }
+
+    .revol-banner:nth-child(1) { margin-bottom:160px; }
+    .revol-banner:nth-child(3) { margin-top:160px; }
 }
 
 /* previews */
@@ -346,9 +433,6 @@
     .card-think-about { height:auto;  }
     .card-think-about > p {  font-size:.9rem; }
 }
-
-
-
 
 /* razons  */
 
@@ -384,12 +468,22 @@
     .razons > article > h4,
     .razons > article > h6, 
     .razons > article > ul { text-align: center; list-style: none; }
+    .razons > article > ul > li { padding:5px 0px; }
 }
 
 @media screen and ( max-width:500px ) 
 {
     .btns-razons { width:60px;height:60px;margin-top:-25%; }
     .btns-razons > img { width:30px; }
+
+    /* aca */
+    /* .razons > article:nth-child(1) { border:1px solid black; } */
+}
+
+@media screen and ( max-width:400px ) 
+{
+    .razons > article { padding:10px 20px;width:90% !important; }
+    .razons > article:first-child { margin-top:50px !important; }
 }
 
 
@@ -403,11 +497,15 @@
 
     #flat-hero-1 > section > article:first-child ,
     #flat-hero-2 > section > article:last-child,
-    #flat-hero-3 > section > article:last-child { width:100%; }
+    #flat-hero-3 > section > article:last-child { width:100%;padding:8%; }
 
     #flat-hero-1 > section > article:last-child,
     #flat-hero-2 > section > article:first-child,
     #flat-hero-3 > section > article:first-child { display:none; }
+
+    #flat-hero-1 > section > article:first-child > button,
+    #flat-hero-2 > section > article:last-child > button,
+    #flat-hero-3 > section > article:last-child > button { width:100%; }
 }
 
 
@@ -429,6 +527,9 @@
     
     #hero-1 > section > section > section:last-child,
     #hero-2 > section > section > section:first-child { width:40%; }
+
+    #hero-1 > section:last-child > section > section:first-child > button,
+    #hero-2 > section:last-child > section > section:last-child > button { width:100%; }
 }
 
 @media screen and ( max-width:900px )
@@ -441,6 +542,16 @@
 @media screen and ( max-width:760px )
 {
     .mockup { display: none; }
+
+    #hero-1 > section > section { margin-left:40px; }
+    #hero-1 > section > section,
+    #hero-2 > section > section  
+    { 
+        padding:0px;
+        
+    }
+
+    #hero-1 > section > section { justify-content: center;}
 
     #hero-1 > section > section > section:first-child,
     #hero-2 > section > section > section:last-child { width:100%;padding:3% 1%; }
@@ -459,10 +570,6 @@
 {
     .rectangle { width:100px; }
 }
-
-
-
-
 
 /* footer */
 
