--- a/css/responsive.css
+++ b/css/responsive.css
@@ -163,49 +163,65 @@
 
 @media screen and ( max-width: 1400px ) 
 {
-    #integrations > article > section > article:first-child,
-    #integrations > article > section > article:last-child { width:50%; }
+    #integrations > section 
+    {
+        display:flex;
+        justify-content: space-between;
+        width:90%;
+    }
 }
 
 @media screen and ( max-width: 1150px ) 
 {
-    #integrations > article > section > article:first-child { width:40%;padding:0px; }
-    #integrations > article > section > article:last-child { width:60%; }
+    #integrations > section > article:first-of-type { width:50%;min-width:200px; }
+    #integrations > section > article:last-child { min-width:450px; }
+
+    .integrations:nth-child(1) { width:150px; top:190px;left:50px; } /* mp */
+    .integrations:nth-child(2) { width:100px;right:100px; bottom:250px; } /* uber */
+    .integrations:nth-child(3) { width:180px;right:100px; top:110px; } /* Pedidos ya */
+    .integrations:nth-child(4) { width:130px;bottom:200px; left:120px; } /* rapi */
+
+    .c-yellow { width:50px;height:50px;top:130px;left:120px; }
+    .lila { width:30px;height:30px; top:40%; right:100px; }
+    .green { width:60px;height:60px; top:50%; left:10%; }  
 }
 
-@media screen and ( max-width: 950px ) 
+@media screen and ( max-width: 1050px ) 
 {
-    #integrations > article > section > article:first-child { width:70%;padding:50px;  }
-    #integrations > article > section > article:last-child { width:70%; }
+    #integrations > section { justify-content: center; }
+
+    #integrations > section > article:first-of-type { width:80%;min-width:200px; }
+    #integrations > section > article:last-child { min-width:450px;height:400px; }
+
+    .integrations:nth-child(1) { top:80px;left:50px; } /* mp */
+    .integrations:nth-child(2) { right:50px; bottom:100px; } /* uber */
+    .integrations:nth-child(3) { right:50px; top:0px; } /* Pedidos ya */
+    .integrations:nth-child(4) { width:150px;bottom:50px; left:160px; } /* rapi */
+
+    .c-yellow { top:30px;left:150px; }
+    .lila { top:170px; right:50px; }
+    .green { top:250px; left:100px; }
 }
 
-@media screen and ( max-width: 950px ) 
-{
-    #integrations > article > section > article:first-child { width:100%;padding:50px;  }
-    #integrations > article > section > article:last-child { width:500px; }
-}
-
-@media screen and ( max-width: 600px ) { .integrations { width:45%; } }
+ 
 
 
-@media screen and ( max-width: 500px ) 
+@media screen and ( max-width: 600px ) 
 { 
-    #integrations > article > section > article:first-child { padding:10px 0px 100px 10px; }
-    #integrations > article > section > article:last-child { height:50vh; }
-    #integrations > article > section > article:first-child > p,
-    #integrations > article > section > article:first-child > .f-1 { text-align: center; }
-    #integrations > article > section > article:first-child > button { display: block; margin:auto; width:70%;}
+    #integrations > section > article:first-of-type { width:100%;min-width:200px; }
+    #integrations > section > article:last-of-type { min-width:450px; }  
+}
 
-    .integrations:nth-child(1) { top:0%; }                              /* mp */
-    .integrations:nth-child(2) { right:0px; bottom:0%; width:35%; }     /* eats */
-    .integrations:nth-child(3) { right:20%; top:0%; }                   /* pedidoya  */
-    .integrations:nth-child(4) { bottom:0%; left:30%; }                 /* rapi */
-
-    .integrations { width:35%; }
-
-    .c-yellow { width:15px;height:15px; top:30%;left:30%; }
-    .lila { width:50px;height:50px; top:40%; right:50px; }
-    .green { width:60px;height:60px; top:50%; left:10%; }    
+@media screen and ( max-width: 400px ) 
+{ 
+    #integrations > section > article:first-of-type { padding:5%; }
+    #integrations > section > article:last-of-type { min-width:350px; }  
+    .c-yellow { left:20px; }
+    .integrations:nth-child(1) { left:10px; } /* mp */
+    .integrations:nth-child(2) { right:0px; bottom:50px; } /* uber */
+    .integrations:nth-child(3) { right:10px; } /* Pedidos ya */
+    .integrations:nth-child(4) { left:100px; } /* rapi */
+    .green { left:30px; }
 }
 
 /* gadgets */
@@ -329,9 +345,13 @@
 
 /* video */
 
+@media screen and ( max-width:800px )
+{
+    .video:first-of-type { height:auto; }
+}
+
 @media screen and ( max-width:600px ) 
 {
-
     #video > section > ul  
     {
         width:100%;
