--- a/css/style.css
+++ b/css/style.css
@@ -94,36 +94,52 @@
 
 /* integrations */
 
+#integrations > section 
+{
+    display:flex;
+    justify-content: space-between;
+}
+
+#integrations > section > article:first-of-type > a > button
+{
+    width:252px;
+    height:60px;
+    font-size:18px;
+}
+
+#integrations > section > article:first-of-type { min-width:450px; }
+#integrations > section > article:last-child { min-width:550px; }
+
 .integrations,.circle { position:absolute; }
-.integrations:nth-child(1) { top:30%; }
-.integrations:nth-child(2) { right:0px; bottom:20%; }
-.integrations:nth-child(3) { right:0px; top:10%; }
-.integrations:nth-child(4) { bottom:0px; left:30%; }
+.integrations:nth-child(1) { top:190px; } /* mp */
+.integrations:nth-child(2) { right:20px; bottom:120px; } /* uber */
+.integrations:nth-child(3) { right:20px; top:110px; } /* Pedidos ya */
+.integrations:nth-child(4) { bottom:45px; left:150px; } /* rapi */
 
 .circle { border-radius:50%; }
 
 .c-yellow {
-    width:80px;
-    height:80px; 
+    width:95px;
+    height:95px; 
     top:15%;
     left:30%;
 }
 .lila 
 { 
-    width:60px;
-    height:60px; 
+    width:39px;
+    height:39px; 
     background-color:#7A42EB;
-    bottom:43%;
-    right:0px;
+    bottom:270px;
+    right:20px;
 }
 
 .green 
 {
-    width:80px;
-    height:80px;
+    width:65px;
+    height:65px;
     background-color:#00E6C9;
-    bottom:20%;
-    left:10%;
+    bottom:155px;
+    left:80px;
 }
 
 /* novelties */
@@ -208,8 +224,7 @@
 
 /* cite */
 
-#cite > section { height:400px; }
-
+#cite > section { height:auto; }
 
 /* previews */
 
@@ -484,7 +499,11 @@
     overflow:hidden;
 }
 
-.video:first-of-type { display: flex; }
+.video:first-of-type 
+{ 
+    display: flex;
+    height:80vh;
+}
 
 #video > section > ul 
 { 
