mejora de componente customers

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -278,6 +278,7 @@
 
 @media screen and ( max-width: 500px ) 
 {
+    #customers > header { width:90%; }
     #customers > article > ul > li { width:50%; }
 }
 
