actualizacion de componente beneficios

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -74,3 +74,5 @@
 .line-ht3 { line-height:28px; }
 .line-ht4 { line-height:20px; }
 .line-ht5 { line-height:10px; }
+
+.line-ht18 { line-height:18px; }
