--- a/css/style.css
+++ b/css/style.css
@@ -679,23 +679,35 @@
 
 /* benefits */
 
-#benefits 
-{
-    display: flex;
-    padding:5% 0px;
-    flex-wrap:wrap;
+#benefits > section > section:first-child > img { width:100%; }
+
+#benefits > section > section > article > ul 
+{ 
+    list-style: none;
+    margin-left:-12px; 
 }
 
-#benefits > section:first-child > img { width:100%; }
-
-#benefits > section:last-child > article > ul { list-style: none; }
-#benefits > section:last-child > article > ul > li::before
+#benefits > section > section > article > ul > li
 {
-    content: "\2022";
-    color: #7A42EB;
-    padding-left:-1em;
+    display:flex;
+    margin:12px 0px -5px 10px;
+    font-family:'think-bold';
+    font-size:18px;
+} 
 
+#benefits > section > section > header > .f-1 { line-height: 65px; }
+
+.list 
+{
+    width:10px;
+    height:10px;
+    border-radius:50%;
+    margin:5px 10px 0px 0px;
+    background-color:#7A42EB;
 }
+
+#benefits > section > section > article > button { width:252px; height: 60px; font-size:18px; }
+
 
 /* footer */
 
