actualizacion de componente de productos complementarios

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -67,6 +67,8 @@
 .f-5 { font-size:18px; }
 .f-6 { font-size:.9rem; }
 
+.f-26 { font-size:26px; }
+
 /* line heighths */
 
 .line-ht1 { line-height:65px; }
