--- a/css/think-grid.css
+++ b/css/think-grid.css
@@ -26,6 +26,7 @@
 .bx-20 { width:20%; }
 .bx-25 { width:25%; }
 .bx-30 { width:30%; }
+.bx-3 { width:33%; }
 .bx-40 { width:40%; }
 .bx-45 { width:45%; }
 .bx-50 { width:50%; }
@@ -50,7 +51,8 @@
 .bx-80,
 .bx-90,
 .bx-f,
-.bx-25 { padding:10px; }
+.bx-25,
+.bx-3 { padding:10px; }
 
 /* HEIGHTS */
 
