--- a/css/style.css
+++ b/css/style.css
@@ -827,6 +827,7 @@ footer > section > article > button { width:100% !important;color:#FFFFFF; }
 
 #bx-mockup 
 {
+    margin-top:-25px;
     width:100%;
     height:100vh;
     display: flex;
@@ -839,29 +840,40 @@ footer > section > article > button { width:100% !important;color:#FFFFFF; }
 {
     width:100%;
     height:100vh;
+    min-width:1536px;
     display:flex;
-    justify-content: center;
+    justify-content:space-around;
     align-items: center;
     transition:.2s;
 }
 
 .bx-mockups-videos 
 {
-    border:15px solid #FFFFFF;
-    margin:0px 2%;
-    background-color:rgba(0,0,0,.3);
+    min-width:267px;
+    width:267px;
+    height:475px;
+    margin:0px 37.5px;
+    padding:15px;
+    background-color:#FFFFFF;
     border-radius:50px;
-    width:20%;
-    min-width:306px;
-    height:65vh;
     overflow:hidden;
     box-shadow:0px 0px 35px rgba(0,0,0,.3);
 }
 
+.box-inner-mockup-video 
+{
+    border-radius:40px;
+    width:237px;
+    height:445px;
+    background-color:#FFFFFF;
+    overflow:hidden;
+    
+}
+
 #circle-mockups 
 {
-    width:400px;
-    height:400px;
+    width:385px;
+    height:385px;
     border-radius:50%;
     position:absolute;
     z-index:-1;
@@ -872,6 +884,7 @@ footer > section > article > button { width:100% !important;color:#FFFFFF; }
 
 #btns-mockups 
 {
+    border:1px solid black;
     position: absolute;
     z-index:50;
     width:100%;
@@ -879,9 +892,22 @@ footer > section > article > button { width:100% !important;color:#FFFFFF; }
     justify-content:space-between;
 }
 
+#prev-mockup-video { left:0px; }
+#next-mockup-video { right:0px;}
+
+#next-mockup-video,
+#prev-mockup-video
+{
+    display:flex;
+    position:absolute;
+    z-index:100;
+    align-self:center;
+}
+
 .bx-btn-play 
 {
-    width:300px;
+
+    width:89%;
     height:300px;
     position: absolute;
     z-index:50;
