--- a/css/fonts.css
+++ b/css/fonts.css
@@ -40,6 +40,15 @@
     src: url(./../fonts/Gotham-Black.ttf);
 }
 
+/*- Gotham -- black -*/
+
+.think-medium { font-family : "think-medium" }
+
+@font-face {
+    font-family:"think-medium";
+    src: url(./../fonts/Gotham-Medium.ttf);
+}
+
 
 /*- Gotham -- black -*/
 
@@ -68,6 +77,7 @@
 .f-6 { font-size:.9rem; }
 
 .f-26 { font-size:26px; }
+.f-16 { font-size:16px; }
 
 /* line heighths */
 
