--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,46 @@
+/* infinite-slide */
+
+#infinite-slide > header 
+{ 
+    display:flex;
+    margin:auto;
+}
+
+#bx-content-animation { display: flex; }
+
+#bx-slide-infinite 
+{
+    min-width:1920px;
+    height:50vh;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    animation:slideshow 8s linear infinite;
+}
+
+.img-radius-integrations 
+{ 
+    width:210px;
+    height:210px;
+}
+
+@keyframes slideshow 
+{
+    0% { transform: translate(0); }
+    100% { transform: translate(-100%); }
+} 
+
+.badge-integrations 
+{
+    width:263px;
+    height:39px;
+    padding:8px 25px;
+    border-radius:5px;
+    font-family: 'think-light';
+    font-size:22px;
+}
+
+
 /* apps-radius */
 
 #apps-radius > article 
@@ -241,7 +284,7 @@
 
 #previews { width:100%; }
 
-.slide-previews { width:1920px; height:1080px; }
+.slide-previews { width:1728px; height:120vh; }
 
 #bx-btns-previews > button > img { display:block; margin: auto; }
 
@@ -270,10 +313,10 @@
     padding:35px 50px;
     width:544px;
     line-height: 30px;
-    bottom:-5%;
+    bottom:-200px;
     left:10%;
     position:absolute;
-    z-index:30;
+    z-index:50;
     display: none;
 }
 
